styles/content/footer.css
.footer {
  padding: 215px 50px 90px;
  display: flex;
  gap: 355px;
  justify-content: space-between;
  align-items: start;
  font-size: 18px;
}

.footer__address {
  display: flex;
  flex-direction: column;
  line-height: 1.35;
  font-style: normal;
  text-align: left;
}

.footer__links-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style: none;
  text-transform: lowercase;
}

.footer__link-active {
  text-decoration: none;
}

.footer__social-list {
  display: flex;
  gap: 50px;
  list-style: none;
}

.footer__social-icon {
  width: 48px;
}

